infer/tests/codetoanalyze/objc/errors/category_procdesc/EOCPerson.m
/*
 * Copyright (c) 2013 - Facebook.
 * All rights reserved.
 */

#import "EOCPerson.h"

@implementation EOCPerson (Work)

- (void)performDaysWork {
    NSLog(@"Performing days at work");
}


- (void)takeVacationFromWork{
    NSLog(@"BTaking vacations");
}
@end
